--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,6 @@ vignettes/*.pdf
 # Shiny token, see https://shiny.rstudio.com/articles/shinyapps.html
 rsconnect/
 .Rproj.user
+
+# html output of notebooks
+*.nb.html
