--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 *.gz filter=lfs diff=lfs merge=lfs -text
 0.pilot-determine-conditions/data/*.csv filter=lfs diff=lfs merge=lfs -text
+1.profile-cell-lines/profiles/*.csv filter=lfs diff=lfs merge=lfs -text
